--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -32,3 +32,11 @@ div.col-xs-3 {
 .rowblock {
 	margin-bottom: 15px;
 }
+
+.footer {
+	border-top: 1px solid #aaa;
+	font-size: 90%;
+	font-style: italic;
+	text-align: right;
+	padding-right: 8px;
+}
