--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,3 +9,5 @@
     %link{rel: 'stylesheet', href: 'https://fonts.googleapis.com/css?family=Exo'}
   %body
     = yield
+    %div{class: 'container'}
+    %div{class: 'footer'} Brynhildr v0.0.2 - Gloria Budiman
