--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -6,6 +6,7 @@
 %div{id: 'dashboard-table'}
 
 = stylesheet_link_tag 'style.css'
+= javascript_include_tag 'sprintf.min'
 = javascript_include_tag 'plotly-latest.min'
 = javascript_include_tag 'binance_endpoint'
 :javascript
