--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,10 +4,12 @@
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %title Brynhildr
     %meta{name: 'viewport', content: 'width=device-width, initial-scale=1.0'}
+
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     %link{rel: 'stylesheet', href: 'https://fonts.googleapis.com/css?family=Exo'}
+    %link{rel: 'stylesheet', href: 'https://fonts.googleapis.com/css?family=Inconsolata'}
   %body
     = yield
     %div{class: 'container'}
