--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -1,15 +1,26 @@
 %nav{class: 'navbar navbar-inverse'}
 	%div{class: 'container-fluid navbar-container'}
-		%a{class: 'navbar-brand navbar-brand-main', 'data-toggle': 'dropdown', href: '#'} 
-			Brynhildr
+		%div{class: 'navbar-header'}
+			%a{class: 'navbar-brand navbar-brand-main', 'data-toggle': 'dropdown', href: '#'} 
+				Brynhildr
+		%select{class: 'selectpicker pull-right', id: 'multibox', 'data-live-search': 'true', multiple: true}
+			%option ETHUSDT
+			%option XMRETH
+			%option ZECETH
+			%option LTCBTC
 
 %div{id: 'dashboard-table'}
 
-= stylesheet_link_tag 'style.css'
+= stylesheet_link_tag 'style'
+= stylesheet_link_tag 'bootstrap-select.min'
 = javascript_include_tag 'sprintf.min'
+= javascript_include_tag 'jstorage.min'
+= javascript_include_tag 'bootstrap-select.min'
 = javascript_include_tag 'plotly-latest.min'
 = javascript_include_tag 'binance_endpoint'
+= javascript_include_tag 'Multibox'
 :javascript
 	$(document).ready(function() {
-		BinanceEndpoint.init();
+		var endpoint = BinanceEndpoint.attach()
+		var multibox = Multibox.init(endpoint)
 	})
