--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -6,7 +6,7 @@
 			%select{class: 'selectpicker pull-right', id: 'multibox', 'data-live-search': 'true', multiple: true}
 
 %div{id: 'dashboard-table'}
-%div{class: 'row'}
+%div{class: 'row col-xs-12'}
 %div{class: 'well well-lg', id: 'welcome-well'}
 
 = stylesheet_link_tag 'style'
