Performance monitoring and message dropping

--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -1,6 +1,6 @@
 %nav{class: 'navbar navbar-inverse'}
 	%div{class: 'container-fluid navbar-container'}
-		%div{class: 'navbar-header'}
+		%div{class: 'navbar-header col-xs-12'}
 			%a{class: 'navbar-brand navbar-brand-main', 'data-toggle': 'dropdown', href: '#'} 
 				Brynhildr
 			%select{class: 'selectpicker pull-right', id: 'multibox', 'data-live-search': 'true', multiple: true}
@@ -13,6 +13,7 @@
 = stylesheet_link_tag 'bootstrap-select.min'
 = javascript_include_tag 'sprintf.min'
 = javascript_include_tag 'jstorage.min'
+= javascript_include_tag 'PerformanceMetric'
 = javascript_include_tag 'bootstrap-select.min'
 = javascript_include_tag 'plotly-latest.min'
 = javascript_include_tag 'binance_endpoint'
