--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -14,6 +14,7 @@
 = javascript_include_tag 'sprintf.min'
 = javascript_include_tag 'jstorage.min'
 = javascript_include_tag 'PerformanceMetric'
+= javascript_include_tag 'MACD'
 = javascript_include_tag 'bootstrap-select.min'
 = javascript_include_tag 'plotly-latest.min'
 = javascript_include_tag 'binance_endpoint'
