--- a/app/views/dashboard/_navbar.html.haml
+++ b/app/views/dashboard/_navbar.html.haml
@@ -1,16 +1,16 @@
 %nav{class: 'navbar navbar-inverse'}
 	%div{class: 'container-fluid navbar-container'}
-		%div{class: 'navbar-header col-xs-12'}
+		%div{class: 'navbar-header'}
 			%a{class: 'navbar-brand navbar-brand-main', 'data-toggle': 'dropdown', href: '#'} 
 				Brynhildr
 			%select{class: 'selectpicker pull-right', id: 'multibox', 'data-live-search': 'true', multiple: true}
-			%div{class: 'collapse navbar-collapse'}
-				%ul{class: 'nav navbar-nav'}
-					%li{class: 'dropdown'}
-						%a{href: '#', class: 'dropdown-toggle', 'data-toggle': 'dropdown'}
-							%span{class: 'glyphicon glyphicon-question-sign'}
-							%span{class: 'caret'}
-						%ul{class: 'dropdown-menu'}
-							%li
-								%a{href: '#', id: 'periphery-help'} Help
-								%a{href: '#', id: 'periphery-donation'} Donation
+
+			%ul{class: 'nav navbar-nav'}
+				%li{class: 'dropdown'}
+					%a{href: '#', class: 'dropdown-toggle', 'data-toggle': 'dropdown'}
+						%span{class: 'glyphicon glyphicon-question-sign'}
+						%span{class: 'caret'}
+					%ul{class: 'dropdown-menu'}
+						%li
+							%a{href: '#', id: 'periphery-help'} Help
+							%a{href: '#', id: 'periphery-donation'} Donation
