--- a/app/views/dashboard/_help.html.haml
+++ b/app/views/dashboard/_help.html.haml
@@ -6,3 +6,5 @@
 				%h4{class: 'modal-title'} Brynhildr
 			%div{class: 'modal-body'}
 				%p Brynhildr is multi-resolution multi-pair exchange monitoring app
+
+				%img{src: "#{asset_path('help.jpg')}", id: 'help-img'}
