--- a/app/views/dashboard/_navbar.html.haml
+++ b/app/views/dashboard/_navbar.html.haml
@@ -13,4 +13,10 @@
 					%ul{class: 'dropdown-menu'}
 						%li
 							%a{href: '#', id: 'periphery-help'} Help
+						%li
 							%a{href: '#', id: 'periphery-donation'} Donation
+						%li{class: 'divider'}
+						%li
+							%a{href: 'https://github.com/gbudiman/brynhildr', target: '_github'} 
+								GitHub
+								%span{class: 'glyphicon glyphicon-new-window'}
