--- a/app/views/dashboard/_help.html.haml
+++ b/app/views/dashboard/_help.html.haml
@@ -1,5 +1,5 @@
 %div{class: 'modal fade', id: 'help'}
-	%div{class: 'modal-dialog'}
+	%div{class: 'modal-dialog modal-lg'}
 		%div{class: 'modal-content'}
 			%div{class: 'modal-header'}
 				%button{tyle: 'button', class: 'close', 'data-dismiss': 'modal'} &times;
