--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -16,6 +16,7 @@
 %div{class: 'pull-right'}
 	Forex last update
 	%span{id: 'forex-last-update'} ...
+%div{class: 'col-xs-12'}
 %div{id: 'dashboard-table'}
 %div{class: 'row col-xs-12'}
 %div{class: 'well well-lg', id: 'welcome-well'}
