Implement aggregate charting

--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -27,6 +27,7 @@
 = javascript_include_tag 'sprintf.min'
 //= javascript_include_tag 'highstock.js'
 = javascript_include_tag 'https://code.highcharts.com/stock/highstock.js'
+= javascript_include_tag 'https://code.highcharts.com/highcharts-more.js'
 = javascript_include_tag 'moment'
 = javascript_include_tag 'jstorage.min'
 = javascript_include_tag 'Periphery'
